# devops-sre-agent

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
examples/: kubernetes-job.yaml
src/devops_sre_agent/: __init__.py  __main__.py  cli.py  cloud_client.py  context.py  context_types.py  git_remote.py  kubernetes.py  observability.py  prompt.py  scenarios.py
src/devops_sre_agent/prompts/: __init__.py  sre-system.md
tests/: test_cli.py  test_context.py  test_core.py  test_dockerfile.py  test_kubernetes.py  test_observability.py
