[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-sre-agent"
version = "0.1.0"
description = "DevOps/SRE-focused Cursor Cloud Agent CLI (Python)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8",
]

[project.scripts]
devops-sre-agent = "devops_sre_agent.cli:main"

# After KAN-2 (first push), set Repository to your real GitHub URL, for example:
# [project.urls]
# Repository = "https://github.com/your-login/devops-sre-agent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"devops_sre_agent.prompts" = ["*.md"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
